Dockerized, Fixed basic bugs